# interop

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  code_style.md  format  ideas.md
cmake/: interop_setup_environment.cmake
common/: CMakeLists.txt
common/include/: any.h  definitions.h  exceptions.h  invariant.h  lazy_sequence.h  logger.h  logger.hpp  sfinae.hpp  string_view_cache.hpp  type_traits.hpp
common/include/utils/: map.hpp  string.h  typing.h
common/source/: exceptions.cpp  logger.cpp  string.cpp  typing.cpp
configs/: example.json
environment/archlinux/: Dockerfile  build  run  setup
environment/archlinux/build.d/: common  stage_1_setup_environment  stage_2_install_packages  stage_optional_build_and_install_v8
framework/: CMakeLists.txt
framework/cpp_module/: conventions.h  declarations.h  field_metadata.hpp  field_view.hpp  function_caller.h  function_metadata.h  function_view.h  function_view.hpp  interop.h  module_context.h  module_definitions.h  module_metadata.h  module_view.h  mosaic.h  object_metadata.h  object_mixin.hpp  object_view.h  object_view.hpp  property_view.hpp  type_metadata.h  value.h  version.h
framework/cpp_module/inner/: class_reflection.h  common.h  function_reflection.h
framework/cpp_module/internals/: class_reflection.h  common.h  function_reflection.h  metadata_utils.hpp  native_callable_data.hpp  native_field_data.hpp  native_module_data.hpp  strict_call_validator.h
framework/cpp_module/type_subsystem/: declarations.h  implicit_conversion.h  mappings.h  type.h  type_id.hpp  user_type_registry.hpp
framework/include/: base_module.h  caches.hpp  configuration.h  declarations.h  ffi.h  ffi_call.hpp  global.h  internal_module.hpp  local_function_caller.h  local_module_context.h  metadata_backward_compatibility.h  module.h  native_function.hpp  native_module.h  native_object.hpp  node.h  node.hpp  node_metadata.hpp  platform.h  platform_factory.h  scope.h  shared_library.h
framework/include_module/: conventions.h  declarations.h  function_caller.h  function_metadata.h  function_view.h  module_context.h  module_definitions.h  module_metadata.h  module_view.h  mosaic.h  object_metadata.h  object_view.h  type_metadata.h  version.h
framework/source/: base_module.cpp  caches.cpp  configuration.cpp  ffi.cpp  ffi_call.inl  field_view.cpp  function_view.cpp  global.cpp  implicit_conversion.cpp  internal_module.cpp  local_function_caller.cpp  local_module_context.cpp  mappings.cpp  metadata_backward_compatibility.cpp  module.cpp  native_function.cpp  native_module.cpp  native_object.cpp  node.cpp  node_metadata.cpp  object_view.cpp  platform_factory.cpp  platfotm.cpp  scope.cpp  shared_library.cpp  value.cpp  version.cpp
os_abstraction/: CMakeLists.txt
os_abstraction/include/: os.h
os_abstraction/source/linux/: os.cpp
os_abstraction/source/windows/: os.cpp
os_abstraction/utility/linux/: utility.h
platform_abstraction/: CMakeLists.txt
platform_abstraction/include/: os.h  platform.h
platform_abstraction/source/linux/: os.cpp  platform.cpp
platform_abstraction/source/windows/: os.cpp  platform.cpp
platform_abstraction/utility/linux/: utility.h
tests/: CMakeLists.txt  main.cpp
tests/cpp_cpp/function_call/: CMakeLists.txt  configuration.json
tests/cpp_cpp/function_call/modules/: CMakeLists.txt  module1.cpp  module2.cpp
tests/cross_language/: CMakeLists.txt
tests/cross_language/javascript/: CMakeLists.txt
tests/cross_language/javascript/function_call/: CMakeLists.txt  configuration.json
tests/cross_language/javascript/function_call/modules/: CMakeLists.txt  module.cpp  module.js
tests/cross_language/javascript/function_call/node/: CMakeLists.txt  module.js  module2.cpp
tests/cross_language/javascript/function_call/root_node/: CMakeLists.txt  main.cpp
tests/cross_language/javascript/objects/: CMakeLists.txt  configuration.json
tests/cross_language/javascript/objects/modules/: CMakeLists.txt  module.cpp  module.js
tests/cross_module/: CMakeLists.txt
tests/cross_module/function_call/: CMakeLists.txt  configuration.json
tests/cross_module/function_call/modules/: module1.cpp  module1.h  module2.cpp
tests/cross_module/function_call/node/: CMakeLists.txt  module1.cpp  module2.cpp
tests/cross_module/function_call/node/module1/: CMakeLists.txt  module.cpp
tests/cross_module/function_call/node/module2/: CMakeLists.txt  module.cpp
tests/cross_module/function_call/root_node/: CMakeLists.txt  main.cpp
tests/js_cpp/: CMakeLists.txt
tests/js_cpp/function_call/: CMakeLists.txt  configuration.json
tests/js_cpp/function_call/modules/: CMakeLists.txt  module.cpp
tests/js_cpp/objects/: CMakeLists.txt  configuration.json
tests/js_cpp/objects/modules/: CMakeLists.txt  module.cpp
tests/js_cpp/properties/: CMakeLists.txt  configuration.json
tests/js_cpp/properties/modules/: CMakeLists.txt  module.cpp  module.js
tests/js_js/: CMakeLists.txt
tests/js_js/function_call/: CMakeLists.txt  configuration.json
tests/js_js/function_call/modules/: CMakeLists.txt  module.cpp  module1.js  module2.js
